# Agents

./: .env.example  README.md  pyproject.toml  requirements.txt
examples/: 1. Setting up the environment.ipynb  1.1 Self-hosting.ipynb  2. Agent with a tool.ipynb  3. Agents with memory.ipynb  4. Human in the loop.ipynb  5. Adding curated knowledge.ipynb  5.1 Adding curated knowledge with Agno.ipynb  5.2 Surreal agent.ipynb  6. Model Context Protocol.ipynb  7. Wisdom of the crowd.ipynb  8. Some agentic patterns.ipynb  9. Agentic workflows.ipynb
examples/10. Deployed agent/: README.md  agentic_blogger.py  agentic_content_agency.py  agentic_seo_agency.py
examples/9. Deployed agent/: README.md  basic.py  requirements.txt  simple_agent.py
markdown_files/: agents.md
