[project]
name = "agents"
version = "0.1.0"
description = "Various agent examples to play around with"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langgraph-cli[inmem]>=0.3.5",
    "langgraph>=0.5.3",
    "python-dotenv>=1.1.1",
    "langchain-openai>=0.3.28",
    "langchain-core>=0.3.69",
    "langchain-community>=0.3.27",
    "tavily-python>=0.7.10",
    "ipykernel>=6.30.0",
    "langchain-google-genai>=2.1.8",
    "langchain-tavily>=0.2.10",
    "agno>=1.7.5",
    "google-genai>=1.26.0",
    "ipywidgets>=8.1.7",
    "lancedb>=0.24.1",
    "pypdf>=5.8.0",
    "tantivy>=0.24.0",
    "pylance>=0.31.1",
    "pandas>=2.3.1",
    "openinference-instrumentation-agno>=0.1.9",
    "opentelemetry-sdk>=1.35.0",
    "opentelemetry-exporter-otlp>=1.35.0",
    "sqlalchemy>=2.0.41",
    "cohere>=5.16.1",
    "unstructured>=0.18.9",
    "markdown>=3.8.2",
    "fastmcp>=2.10.6",
    "faiss-cpu>=1.11.0.post1",
    "vllm>=0.10.0",
    "duckduckgo-search>=8.1.1",
    "newspaper4k>=0.9.3.1",
    "lxml-html-clean>=0.4.2",
    "surrealdb>=1.0.6",
]
